--- a/peanut/arbus/templates/photos/groups.html
+++ b/peanut/arbus/templates/photos/groups.html
@@ -51,7 +51,7 @@
 <div data-role="page" id="index">
 
 	<div data-role="header" data-theme="b">
-		<h1>{{ user.first_name }}'s photos ({{ numPhotos }})</h1>
+		<h1>{{ user.display_name }}'s photos ({{ numPhotos }})</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">
