--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -64,80 +64,85 @@
 <script src="/static/jquery.timeago.js"></script>
 <body>
 <div class="ui-content">
-	<div class='ui-header'> Search/Photos/Arbus </div>
-	<table class='ui-table' cellpadding='3'>
-		<tr class='ui-row-header' >
-			<td class='userid b-r'> UserId </td>
-			<td class='name b-r'> Name </td>
-			<td class='phoneid b-r'> PhoneId </td>
-			<td class='created b-r'> Created </td>
-			<td class='db-count b-r'> DBPhotos </td>
-			<td class='db-thumbnails b-r'> Thumbs <br> (%)</td>
-			<td class='twofish b-r'> TwoFish <br> (%) </td>
-			<td class='clustered b-r'> Clustered <br> (%)  </td>
-			<td class='index-count b-r'> Indexed <br> Photos (%) </td>
-			<td class='faces b-r'> Face <br> Rec (%)  </td>
-			<td class='db-fullimage b-r'> Full <br>images (%) </td>
-			<td class='overfeat b-r'> Overfeat <br> (%)  </td>
-			<td class='classifications b-r'> Image <br> Rec (%)  </td>
-			<td class='last-uploaded-timestamp b-r'> Last Upload </td>
-			<td class='last-updated-timestamp'> Last updated </td>			
-		</tr>
-	{% for entry in arbusList %}
-		<tr class='ui-row {% if entry.internal == False %} ui-row-external {% endif %}'>
-			<td class='userid b-r'> {{ entry.user.id }} </td>
-			<td class='name b-r'> {{ entry.user.display_name}}</td>
-			<td class='phoneid b-r' title='{{ entry.user.phone_id }}'> {{ entry.user.phone_id|truncatechars:12}} </td>
-			<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
-			<td class='db-count right b-r'> {{ entry.dbCount }} </td>
-			<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
-			<td class='twofish right percent b-r' title='{{ entry.twofishCount }}' >{{ entry.twofish }} </td>
-			<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
-			<td class='index-count right percent b-r'> {{ entry.resultsCount }} </td>
-			<td class='faces right percent b-r'> {{ entry.faces }} </td>
-			<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>	
-			<td class='overfeat right percent b-r' title="{{ entry.overfeatCount }} "> {{ entry.overfeat }} </td>		
-			<td class='classifications right percent b-r'> {{ entry.classifications }} </td>
-			<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
-			<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
-		</tr>
-	{% endfor %}
+	{% if arbusList %}
+		<div class='ui-header'> Search/Photos/Arbus &mdash; {{ arbusList|length }} accounts </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row-header' >
+				<td class='userid b-r'> UserId </td>
+				<td class='name b-r'> Name </td>
+				<td class='phoneid b-r'> PhoneId </td>
+				<td class='created b-r'> Created </td>
+				<td class='db-count b-r'> DBPhotos </td>
+				<td class='db-thumbnails b-r'> Thumbs <br> (%)</td>
+				<td class='twofish b-r'> TwoFish <br> (%) </td>
+				<td class='clustered b-r'> Clustered <br> (%)  </td>
+				<td class='index-count b-r'> Indexed <br> Photos (%) </td>
+				<td class='faces b-r'> Face <br> Rec (%)  </td>
+				<td class='db-fullimage b-r'> Full <br>images (%) </td>
+				<td class='overfeat b-r'> Overfeat <br> (%)  </td>
+				<td class='classifications b-r'> Image <br> Rec (%)  </td>
+				<td class='last-uploaded-timestamp b-r'> Last Upload </td>
+				<td class='last-updated-timestamp'> Last updated </td>			
+			</tr>
+		{% for entry in arbusList %}
+			<tr class='ui-row {% if entry.internal == False %} ui-row-external {% endif %}'>
+				<td class='userid b-r'> {{ entry.user.id }} </td>
+				<td class='name b-r'> {{ entry.user.display_name}}</td>
+				<td class='phoneid b-r' title='{{ entry.user.phone_id }}'> {{ entry.user.phone_id|truncatechars:12}} </td>
+				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
+				<td class='db-count right b-r'> {{ entry.dbCount }} </td>
+				<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
+				<td class='twofish right percent b-r' title='{{ entry.twofishCount }}' >{{ entry.twofish }} </td>
+				<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
+				<td class='index-count right percent b-r'> {{ entry.resultsCount }} </td>
+				<td class='faces right percent b-r'> {{ entry.faces }} </td>
+				<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>	
+				<td class='overfeat right percent b-r' title="{{ entry.overfeatCount }} "> {{ entry.overfeat }} </td>		
+				<td class='classifications right percent b-r'> {{ entry.classifications }} </td>
+				<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
+				<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
+			</tr>
+		{% endfor %}
 	</table>
-	<div class='ui-header'> Strand </div>
-	<table class='ui-table' cellpadding='3'>
-		<tr class='ui-row-header' >
-			<td class='userid b-r'> UserId </td>
-			<td class='name b-r'> Name </td>
-			<td class='phoneid b-r'> PhoneId </td>
-			<td class='created b-r'> Created </td>
-			<td class='db-count b-r'> DBPhotos </td>
-			<td class='db-thumbnails b-r'> Thumbs <br> (%)</td>
-			<td class='twofish b-r'> TwoFish <br> (%) </td>
-			<td class='clustered b-r'> Clustered <br> (%)  </td>
-			<td class='db-fullimage b-r'> Full <br>images (%) </td>
-			<td class='neighbor b-r'> Neighbor <br> (%) </td>
-			<td class='notifications b-r'> Notifications <br> sent </td>
-			<td class='last-uploaded-timestamp b-r'> Last Upload </td>
-			<td class='last-updated-timestamp'> Last updated </td>			
-		</tr>
-	{% for entry in strandList %}
-		<tr class='ui-row {% if entry.internal == False %} ui-row-external {% endif %}'>
-			<td class='userid b-r'> {{ entry.user.id }} </td>
-			<td class='name b-r'> {{ entry.user.display_name}}</td>
-			<td class='phoneid b-r' title='{{ entry.user.phone_id }}'> {{ entry.user.phone_id|truncatechars:12}} </td>
-			<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
-			<td class='db-count right b-r'> {{ entry.dbCount }} </td>
-			<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
-			<td class='twofish right percent b-r' title='{{ entry.twofishCount }}'> {{ entry.twofish }} </td>
-			<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
-			<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
-			<td class='neighbor right b-r'> {{ entry.neighbor }} </td>
-			<td class='notifications right b-r'> {{ entry.notifications }} </td>
-			<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
-			<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
-		</tr>
-	{% endfor %}
-	</table>
+	{% endif %}
+
+	{% if strandList %}
+		<div class='ui-header'> Strand &mdash; {{ strandList|length }} accounts </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row-header' >
+				<td class='userid b-r'> UserId </td>
+				<td class='name b-r'> Name </td>
+				<td class='phoneid b-r'> PhoneId </td>
+				<td class='created b-r'> Created </td>
+				<td class='db-count b-r'> DBPhotos </td>
+				<td class='db-thumbnails b-r'> Thumbs <br> (%)</td>
+				<td class='twofish b-r'> TwoFish <br> (%) </td>
+				<td class='clustered b-r'> Clustered <br> (%)  </td>
+				<td class='db-fullimage b-r'> Full <br>images (%) </td>
+				<td class='neighbor b-r'> Neighbor <br> (%) </td>
+				<td class='notifications b-r'> Notifications <br> sent </td>
+				<td class='last-uploaded-timestamp b-r'> Last Upload </td>
+				<td class='last-updated-timestamp'> Last updated </td>			
+			</tr>
+		{% for entry in strandList %}
+			<tr class='ui-row {% if entry.internal == False %} ui-row-external {% endif %}'>
+				<td class='userid b-r'> {{ entry.user.id }} </td>
+				<td class='name b-r'> {{ entry.user.display_name}}</td>
+				<td class='phoneid b-r' title='{{ entry.user.phone_id }}'> {{ entry.user.phone_id|truncatechars:12}} </td>
+				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
+				<td class='db-count right b-r'> {{ entry.dbCount }} </td>
+				<td class='db-thumbnails right percent b-r' title='{{ entry.thumbsCount }}'> {{ entry.thumbs }} </td>
+				<td class='twofish right percent b-r' title='{{ entry.twofishCount }}'> {{ entry.twofish }} </td>
+				<td class='clustered right percent b-r' title='{{ entry.clusteredCount }}'> {{ entry.clustered }} </td>
+				<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
+				<td class='neighbor right b-r'> {{ entry.neighbor }} </td>
+				<td class='notifications right b-r'> {{ entry.notifications }} </td>
+				<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
+				<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
+			</tr>
+		{% endfor %}
+		</table>
+	{% endif %}
 	<div class="ui-key">
 		Key: <span style='background-color: #C0C0C0;'> Shaded</span> rows are external users.
 	</div>
