--- a/peanut/strand/templates/strand/neighbors.html
+++ b/peanut/strand/templates/strand/neighbors.html
@@ -192,7 +192,7 @@
 	<div class="ui-gallery" id="allImages"/>
 	<div class="ui-msg hidden"> 
 		<div class="ui-msg-tag hidden">Share photos automatically with nearby friends. </div>
-		<div class="ui-msg-action">Take a photo <img height='35px' width='35px' src='/static/camera.png'> to get started!</div>
+		<div class="ui-msg-action">Take a photo <img style='vertical-align:text-top' height='35px' width='35px' src='/static/camera.png'> to get started!</div>
 	</div>
 </div>
 
