--- a/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
+++ b/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
@@ -10,19 +10,27 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pyI-BW-oRZ" userLabel="Friends bar">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="16"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pyI-BW-oRZ" userLabel="Top control bar">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nearby Friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBJ-AM-vSK">
-                            <rect key="frame" x="13" y="-3" width="293" height="21"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Derek, Aseem &amp; 4 others will see this photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBJ-AM-vSK">
+                            <rect key="frame" x="28" y="0.0" width="258" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="11.5"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
+                            <color key="shadowColor" red="0.27857506789999997" green="0.27857506789999997" blue="0.27857506789999997" alpha="1" colorSpace="calibratedRGB"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.40000000000000002" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="TBJ-AM-vSK" secondAttribute="trailing" constant="34" id="8f0-2e-I16"/>
+                        <constraint firstItem="TBJ-AM-vSK" firstAttribute="top" secondItem="pyI-BW-oRZ" secondAttribute="top" id="Zoa-uv-UMd"/>
+                        <constraint firstAttribute="bottom" secondItem="TBJ-AM-vSK" secondAttribute="bottom" id="fbe-kv-y3v"/>
+                        <constraint firstItem="TBJ-AM-vSK" firstAttribute="leading" secondItem="pyI-BW-oRZ" secondAttribute="leading" constant="28" id="sT4-hr-hiL"/>
+                        <constraint firstAttribute="height" constant="31" id="szZ-xz-002"/>
+                    </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FDr-hg-nDc" userLabel="Shutter Button">
                     <rect key="frame" x="119" y="456" width="82" height="82"/>
@@ -46,23 +54,19 @@
                         <color key="titleColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNo-vb-nP7" userLabel="Flash - Button">
-                    <rect key="frame" x="0.0" y="5" width="50" height="20"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="right" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mF1-Q6-VZs" userLabel="SwapCamera - Button">
+                    <rect key="frame" x="276" y="0.0" width="44" height="64"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <size key="titleShadowOffset" width="0.0" height="1"/>
-                    <state key="normal" title="Auto" image="Assets/Icons/FlashOnButton.png">
+                    <state key="normal" image="Assets/Icons/SwapCameraButton">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mF1-Q6-VZs" userLabel="SwapCamera - Button">
-                    <rect key="frame" x="270" y="0.0" width="50" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNo-vb-nP7" userLabel="Flash - Button">
+                    <rect key="frame" x="0.0" y="0.0" width="44" height="64"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="DXf-4a-aBG"/>
-                        <constraint firstAttribute="width" constant="50" id="JBR-J1-7nT"/>
-                    </constraints>
-                    <state key="normal" image="Assets/Icons/SwapCameraButton">
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <size key="titleShadowOffset" width="0.0" height="1"/>
+                    <state key="normal" image="Assets/Icons/FlashOnButton.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -70,13 +74,12 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="c4Q-fB-mQc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="12I-m1-2LR"/>
-                <constraint firstItem="mF1-Q6-VZs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="83g-dU-jJ8"/>
-                <constraint firstAttribute="trailing" secondItem="mF1-Q6-VZs" secondAttribute="trailing" id="8lJ-hI-he6"/>
+                <constraint firstItem="pyI-BW-oRZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ClO-Ub-x7k"/>
                 <constraint firstAttribute="centerX" secondItem="FDr-hg-nDc" secondAttribute="centerX" id="Dq7-Ts-nDS"/>
                 <constraint firstAttribute="bottom" secondItem="c4Q-fB-mQc" secondAttribute="bottom" constant="13" id="Faf-xr-73O"/>
-                <constraint firstItem="oNo-vb-nP7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Maa-Zp-mSY"/>
-                <constraint firstItem="oNo-vb-nP7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="NfH-IQ-XeU"/>
                 <constraint firstAttribute="bottom" secondItem="FDr-hg-nDc" secondAttribute="bottom" constant="30" id="Qn3-xw-Pdn"/>
+                <constraint firstAttribute="trailing" secondItem="pyI-BW-oRZ" secondAttribute="trailing" id="VNR-Me-jDv"/>
+                <constraint firstItem="pyI-BW-oRZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="b26-RU-Fs8"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
