--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -131,10 +131,10 @@
 				<td class='db-fullimage b-r'> Full <br>images (%) </td>
 				<td class='neighbor b-r'> Neighbor <br> (%) </td>
 				<td class='notifications b-r'> Nots <br> sent </td>
+				<td class='last-not-timestamp b-r'> Last Not. <br> Timestamp </td>
 				<td class='location b-r'> Location </td>
 				<td class='location-timestamp b-r'> Location <br> Timestamp </td>
 				<td class='last-uploaded-timestamp b-r'> Last Upload </td>
-				<td class='last-updated-timestamp'> Last updated </td>			
 			</tr>
 		{% for entry in strandList %}
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
@@ -160,6 +160,7 @@
 				<td class='db-fullimage right b-r' title='{{ entry.fullimagesCount }}'> {{ entry.fullimages }} </td>
 				<td class='neighbor right b-r'> {{ entry.neighbor }} </td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
+				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
 				<td class='location right b-r'> 
 					{% if entry.user.last_location_point %}
 					<a target=_new href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
@@ -167,7 +168,6 @@
 				</td>
 				<td class='location-timestamp timeago b-r' title='{{ entry.lastLocationTimestamp}}'></td>
 				<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
-				<td class='last-updated-timestamp timeago' title="{{ entry.lastUpdatedTime }}"> </td>			
 			</tr>
 		{% endfor %}
 		</table>
