--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewController.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewController.xib
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFPhotoViewController">
             <connections>
+                <outlet property="favoriteButton" destination="3hm-Wm-CE3" id="Tvh-Yx-8nj"/>
                 <outlet property="photoView" destination="qLd-yU-pjU" id="rYp-6S-C2q"/>
                 <outlet property="toolbar" destination="RoJ-UU-ZGf" id="iI5-rK-Buf"/>
+                <outlet property="trashButton" destination="ORz-bW-5Hu" id="YEX-VC-36f"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -24,20 +26,35 @@
                         <outletCollection property="gestureRecognizers" destination="9nG-T9-qUv" appends="YES" id="XQh-8Q-IlC"/>
                     </connections>
                 </view>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RoJ-UU-ZGf">
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RoJ-UU-ZGf">
                     <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <items/>
+                    <items>
+                        <barButtonItem image="LikeOffToolbarIcon.png" id="3hm-Wm-CE3" userLabel="Favorite button">
+                            <connections>
+                                <action selector="favoriteButtonPressed:" destination="-1" id="ctU-ew-VZC"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="qko-80-vZ8"/>
+                        <barButtonItem systemItem="trash" id="ORz-bW-5Hu" userLabel="Trash button">
+                            <connections>
+                                <action selector="deleteButtonPressed:" destination="-1" id="ISq-EH-cw8"/>
+                            </connections>
+                        </barButtonItem>
+                    </items>
                     <color key="tintColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                 </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <constraints>
+                <constraint firstItem="RoJ-UU-ZGf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="0pn-4J-NNg"/>
                 <constraint firstItem="qLd-yU-pjU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="F6g-Q3-GTr"/>
+                <constraint firstAttribute="bottom" secondItem="RoJ-UU-ZGf" secondAttribute="bottom" id="Mry-z3-jlD"/>
                 <constraint firstAttribute="trailing" secondItem="qLd-yU-pjU" secondAttribute="trailing" id="Xzb-f7-jlr"/>
                 <constraint firstAttribute="bottom" secondItem="qLd-yU-pjU" secondAttribute="bottom" id="Zyn-zm-ZuY"/>
                 <constraint firstItem="qLd-yU-pjU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rYv-hr-8h8"/>
+                <constraint firstAttribute="trailing" secondItem="RoJ-UU-ZGf" secondAttribute="trailing" id="w2N-sV-aaV"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -50,4 +67,7 @@
             </connections>
         </tapGestureRecognizer>
     </objects>
+    <resources>
+        <image name="LikeOffToolbarIcon.png" width="22" height="22"/>
+    </resources>
 </document>
