made summary page fast

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -122,7 +122,7 @@
 			<tr class='ui-row-header' >
 				<td class='userid b-r'> UserId </td>
 				<td class='name b-r'> Name </td>
-				<td class='phoneid b-r'> PhoneId/Num </td>
+				<td class='phoneid b-r'> Phone # </td>
 				<td class='created b-r'> Created </td>
 				<td class='db-count b-r'> DBPhotos </td>
 				<td class='db-thumbnails b-r'> Thumbs <br> (%)</td>
@@ -140,7 +140,8 @@
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
 				<td class='userid b-r'> {{ entry.user.id }} </td>
 				<td class='name b-r'> {{ entry.user.display_name}}</td>
-				<td class='phoneid b-r' title='{{ entry.user.phone_id }}  {{ entry.user.phone_number }}'> 
+				<td class='phoneid b-r' title='{{ entry.user.phone_number }}'> 
+
 					{% if entry.user.phone_number %}
 						{% if entry.user.phone_number|length > 12 %}
 							Archived
@@ -148,9 +149,7 @@
 							{{ entry.user.phone_number }}
 						{% endif %}
 					{% else %}
-						{% if entry.user.phone_id %}
-							Old account
-						{% endif %} 
+						&mdash; 
 					{% endif %} </td>
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 				<td class='db-count right b-r'> {{ entry.dbCount }} </td>
