--- a/peanut/strand/templates/strand/neighbors.html
+++ b/peanut/strand/templates/strand/neighbors.html
@@ -115,19 +115,9 @@
 			return output.join(', ');
 		}
 
-		function getPhotoCount(data) {
-			var count = 0;
-			$.each( data.objects, function( i, objects ) {
-				if (objects.type == 'section') {
-					$.each(objects.objects, function(i, photos) {
-						count++;
-					});	
-				}
-			});
-			return count;
-		}
-
 		function processData(data) {
+			$("#allImages").empty();
+			
 			$.each( data.objects, function( i, objects ) {
 				if (objects.type == 'section') {
 					row = "";
@@ -163,14 +153,14 @@
 		*/
 		var userId = getURLParameter("user_id");
 		var url = "/strand/api/neighbors?user_id=" + userId;
-		var oldDataCount;
+		var oldData;
 		
 		$(document).ready(function(){
 
 			// Have to do the initial load, using an interval will actually wait the amount of time first
 			console.log("Sending request to " + url);
 			$.get(url, function( data ) {
-				oldDataCount = getPhotoCount(data)
+				oldData = data
 				processData(data)
 			});
 			
@@ -181,12 +171,10 @@
 
 				$.get(url, function( data ) {
 					if (data.objects && data.objects.length > 0) {
-						photoCount = getPhotoCount(data)
-						if (photoCount != oldDataCount) {
-							oldDataCount = photoCount
+						if (JSON.stringify(data) !== JSON.stringify(oldData)) {
+							oldData = data
 
 							console.log("Refreshing data")
-							$('#allImages').empty();
 							processData(data)
 						}
 					}
