reverting timeago changes back

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -200,7 +200,7 @@ $(document).ready(function() {
   }
   $('td.timeago').each(function(){
 	if ($(this).html().search('min') > -1 || 
-		$(this).html().search('hr') > -1 ||
+		$(this).html().search('hour') > -1 ||
 		$(this).html().search('now') > -1){
 		$(this).addClass('recent');
 	}
