tweaking invite image padding

--- a/peanut/strand/templates/strand/neighbors.html
+++ b/peanut/strand/templates/strand/neighbors.html
@@ -64,8 +64,9 @@
 		.ui-invite {
 			text-align: right;
 			float: right;
-			width: 50px;
+			width: 60px;
 			height: 40px;
+			padding-right: 14px;
 		}
 		.ui-invite-icon {
 			width: 40px;
