--- a/peanut/strand/templates/strand/neighbors.html
+++ b/peanut/strand/templates/strand/neighbors.html
@@ -165,7 +165,7 @@
 			if (data.objects && data.objects.length === 0){
 				$('div.ui-msg').removeClass('hidden');
 			}
-			else if (!($('.div.ui-msg').hasClass('hidden'))){
+			else if ((data.objects && data.objects.length > 0) && (!($('.div.ui-msg').hasClass('hidden')))){
 				$('div.ui-msg').addClass('hidden');
 			}
 		}
@@ -192,17 +192,13 @@
 				console.log("Sending request to " + url);
 
 				$.get(url, function( data ) {
-					if (data.objects && data.objects.length > 0) {
+					if (data.objects) {
 						if (JSON.stringify(data) !== JSON.stringify(oldData)) {
 							oldData = data
 							console.log("Refreshing data")
 							processData(data)
 						}
 					}
-					else {
-						updateNoPhotoMessage(data);
-					}
-					
 				});
 			}, 1000);
 		});
